# esp32_sensor_board

firmware/: esp32_sensor_board.code-workspace
firmware/bringup/C3 Bringup/: platformio.ini
firmware/bringup/C3 Bringup/boards/: esp32-c3-sensor-board.json
firmware/bringup/C3 Bringup/idf-bringup/: CMakeLists.txt
firmware/bringup/C3 Bringup/idf-bringup/main/: main.c
firmware/bringup/intro/: Cargo.toml  README.md  diagram.json  wokwi.toml
firmware/bringup/intro/src/: main.rs
firmware/cpp/sdcard-test/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/cpp/sdcard-test/main/: sd_card_example_main.c
firmware/ina237/src/: commands.rs  ina237.rs  lib.rs  types.rs
firmware/rust/antenna-test/: Cargo.toml
firmware/rust/antenna-test/.cargo/: config.toml
firmware/rust/antenna-test/src/: main.rs
firmware/rust/bringup/embassy-idf-playground/: Cargo.toml  diagram.json  wokwi.toml
firmware/rust/bringup/embassy-idf-playground/src/: main.rs
firmware/rust/bringup/embassy-playground/: Cargo.toml
firmware/rust/bringup/intro/: Cargo.toml  README.md  rust-toolchain.toml  wifi-perf-test.md
firmware/rust/bringup/intro/src/: main.rs  mqtt_manager.rs  wifi_config.rs  wifi_manager.rs
firmware/rust/ina237/: Cargo.toml
firmware/rust/ina237/src/: commands.rs  ina237.rs  lib.rs  types.rs
firmware/rust/nau7802/: Cargo.toml
firmware/rust/nau7802/src/: lib.rs  nau7802.rs  registers.rs
firmware/rust/sht40/: Cargo.toml
firmware/rust/sht40/src/: lib.rs
hardware/USB4510-03-1-A_REVA/: GCT_USB4510-03-1-A_REVA.kicad_mod  USB4510-03-1-A_REVA.kicad_sym
hardware/relay_board/: relay_board.kicad_pcb  relay_board.kicad_pro  relay_board.kicad_sch
hardware/relay_board/output/: relay_board-B_Cu.gbr  relay_board-B_Mask.gbr  relay_board-B_Paste.gbr  relay_board-B_Silkscreen.gbr  relay_board-Edge_Cuts.gbr  relay_board-F_Cu.gbr  relay_board-F_Mask.gbr  relay_board-F_Paste.gbr  relay_board-F_Silkscreen.gbr  relay_board-NPTH.drl  relay_board-PTH.drl  relay_board-job.gbrjob
hardware/v0/esp32_sensor_board/: esp32_sensor_board.kicad_pcb  esp32_sensor_board.kicad_pro  esp32_sensor_board.kicad_sch  esp32_sensor_power.kicad_sch  esp32_uc.kicad_sch  fp-lib-table  sensor_loadcell.kicad_sch  sensor_power_measurement.kicad_sch  sym-lib-table  temp_humidity.kicad_sch  wrong_esp32_sensor_board.kicad_pcb
hardware/v0/esp32_sensor_board/bom/: ibom.html
hardware/v0/esp32_sensor_board/output/: esp32_sensor_board-B_Cu.gbr  esp32_sensor_board-B_Mask.gbr  esp32_sensor_board-B_Paste.gbr  esp32_sensor_board-B_Silkscreen.gbr  esp32_sensor_board-Edge_Cuts.gbr  esp32_sensor_board-F_Adhesive.gbr  esp32_sensor_board-F_Cu.gbr  esp32_sensor_board-F_Mask.gbr  esp32_sensor_board-F_Paste.gbr  esp32_sensor_board-F_Silkscreen.gbr  esp32_sensor_board-In1_Cu.gbr  esp32_sensor_board-In2_Cu.gbr  esp32_sensor_board-NPTH.drl  esp32_sensor_board-PTH.drl  esp32_sensor_board-job.gbrjob
