[package]
name = "embassy-idf-playground"
version = "0.1.0"
authors = ["Ben Von Handorf <developer@benvonhandorf.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "embassy-idf-playground"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }

ina237 = { path = "../../ina237"}
nau7802 = { path = "../../nau7802"}

[build-dependencies]
embuild = "0.32.0"