[package]
name = "intro"
version = "0.1.0"
authors = ["Ben Von Handorf <ben@skyironstudio.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

# default = ["std", "hal", "esp-idf-sys/native"]


# pio = ["esp-idf-sys/pio"]
# all = ["std", "nightly", "experimental", "embassy"]
# hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
# std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
# alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
# nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
# experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
# embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]


[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49.0", default-features = false }
embedded-svc = { version="0.28.0" }
embedded-hal = { version = "1.0.0"}


# log = { version = "0.4.17", default-features = false }
# esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git", default-features = false}
# esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", optional = true, default-features = false }
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", optional = true, default-features = false }
# embedded-svc = { git = "https://github.com/esp-rs/embedded-svc", optional = true, default-features = false }
# esp-idf-sys = { version = "0.34.1", default-features = false }
# esp-idf-hal = { version = "0.43.1", optional = true, default-features = false }
# esp-idf-svc = { version = "0.48.1", optional = true, default-features = false }
# embedded-svc = { version = "0.27.1", optional = true, default-features = false }
sht4x = { git="https://github.com/benvonhandorf/sht4x" }
anyhow = "1.0.72"
# shared-bus = "0.3.1"
embedded-hal-bus = { version = "0.2.0", features = ["std"] }
# embedded-sdmmc = { version = "0.7.0" }

ina237 = { path = "../../ina237"}
nau7802 = { path = "../../nau7802"}


[build-dependencies]
embuild = "0.32.0"

[package.metadata.espflash]
partition_table = "partitions.csv" # Supports CSV and binary formats
