[package]
name = "intro"
version = "0.1.0"
authors = ["Ben Von Handorf <ben@skyironstudio.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

# default = ["std", "hal", "esp-idf-sys/native"]


# pio = ["esp-idf-sys/pio"]
# all = ["std", "nightly", "experimental", "embassy"]
# hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
# std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
# alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
# nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
# experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
# embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]


[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49.0", default-features = false}

sht4x = { git="https://github.com/benvonhandorf/sht4x" }
anyhow = "1.0.72"
embedded-hal-bus = { version = "0.2.0", features = ["std"] }

ina237 = { path = "../../ina237"}
nau7802 = { path = "../../nau7802"}

[build-dependencies]
embuild = "0.32.0"

[package.metadata.espflash]
partition_table = "partitions.csv" # Supports CSV and binary formats
